修复redis异常，增加mybatis-plus