@@ -2,6 +2,7 @@ package com.foodmap.security.config;
 
 import com.foodmap.security.jwt.JwtAuthenticationFilter;
 import com.foodmap.security.jwt.JwtTokenProvider;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -22,23 +23,20 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
 
     private final UserDetailsService userDetailsService;
     private final JwtTokenProvider tokenProvider;
 
-    public SecurityConfig(UserDetailsService userDetailsService, JwtTokenProvider tokenProvider) {
-        this.userDetailsService = userDetailsService;
-        this.tokenProvider = tokenProvider;
-    }
-
     @Bean
     public JwtAuthenticationFilter jwtAuthenticationFilter() {
-        return new JwtAuthenticationFilter(tokenProvider);
+        return new JwtAuthenticationFilter(tokenProvider, userDetailsService);
     }
 
     @Bean
@@ -56,22 +54,44 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        // 最宽松配置 - 允许所有请求，禁用大部分安全特性
         http
-                // 禁用CSRF保护
+                // 配置CSRF保护 - 对API服务通常可以禁用
                 .csrf(csrf -> csrf.disable())
-                // 禁用跨域保护
-                .cors(cors -> cors.disable())
-                // 允许所有请求
+
+                // 启用CORS
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+                // 配置会话管理 - JWT是无状态的
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+                // 配置请求授权
                 .authorizeHttpRequests(auth -> auth
-                        .anyRequest().permitAll()
+                        // 公开接口 - 不需要认证
+                        .requestMatchers("/api/auth/**", "/api/public/**", "/swagger-ui/**", "/v3/api-docs/**").permitAll()
+                        // 允许OPTIONS请求通过，用于CORS预检
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        // 特定权限控制
+                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                        // 其他所有请求需要认证
+                        .anyRequest().authenticated()
                 )
-                // 禁用表单登录
+
+                // 禁用表单登录，我们使用JWT
                 .formLogin(form -> form.disable())
+
                 // 禁用HTTP Basic认证
                 .httpBasic(basic -> basic.disable())
-                // 禁用登出功能
-                .logout(logout -> logout.disable());
+
+                // 配置注销功能
+                .logout(logout -> logout
+                        .logoutUrl("/api/auth/logout")
+                        .logoutSuccessHandler((request, response, authentication) -> {
+                            response.setStatus(200);
+                        }));
+
+        // 添加JWT过滤器
+        http.addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -79,11 +99,19 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        // 指定允许的源，不要使用*，尤其是在允许凭据时
+        configuration.setAllowedOrigins(List.of("http://localhost:8080", "https://your-production-domain.com"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With"
+        ));
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "X-New-Token"));
+        // 如果设置为true，确保设置了具体的AllowedOrigins而不是通配符
         configuration.setAllowCredentials(true);
+        // 缓存时间
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
